create backend and install nodeman and body-parser packages

--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
-{ 
+{
   "name": "boiler-plate",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "backend": "nodemon index.js"
+    
   },
   "author": "jeongmi-park",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
