Use bcrypt to encrypt password and create token for login

--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "backend": "nodemon index.js"
-    
   },
   "author": "jeongmi-park",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3"
   },
   "devDependencies": {
