--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "concurrently": "^7.2.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.3"
+    "mongoose": "^6.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
